--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+/* BBC SPORT ACTIVITY
+body { 
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-left: 15%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.smallContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding-top: 30px;
+}
+
+.small {
+  width: 28%;
+}
+
+.small img {
+  width: 90%;
+}
+
+.large {
+  padding-top: 20px;
+  padding-bottom: 30px;
+  width: 80%;
+  margin: 0;
+}
+
+.large img{
+  float: left;
+  width: 55%;
+  padding-right: 20px;
+}
+
+.large h3 {
+  font-size: 2.5em;
+  padding-bottom: 0;
+  margin: 0;
+}
+
+.large h6 {
+  padding-top: 20px;
+  font-size: 1.2em; 
+  font-family:Arial, Helvetica, sans-serif;
+  margin: 0;
+} */
+
+/*COUNTING SITE*/
+
+/* h1 {
+  font-size: 5em;
+  color: rgb(4, 0, 255);
+}
+
+button {
+  margin: 50px;
+  padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-size: 3em;
+  background-color: rgb(4, 0, 255);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: white;
+  color:rgb(4, 0, 255);
+  transition:ease-in-out;
+  transition-duration: 0.5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.display {
+  display: flex; 
+  flex-direction: row;
+  justify-content: center;
 }
+
+.two {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.two button {
+  padding-left: 26px;
+  padding-right: 26px;
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@100;200&display=swap');
